[metadata]
name = ordered-map
version = 0.0.1
description = Ordered map parser and writer..
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = jlaros@fixedpoint.nl
url = https://github.com/jfjlaros/ordered-map
keywords =
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
tests_require =
    pytest==5.4.1

[options.entry_points]
console_scripts =
    ordered_map = ordered_map.cli:main
